[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyspark_mock"
version = "0.0.1"
authors = [
  { name="Gabriel Starosky", email="gabrielstarosky@gmail.com" },
]
description = "Package for mock pyspark for unit testing without opening spark session"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.pyright]
venvPath = "."
venv = ".venv"
